--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   <body>
     <h1>Git marge work practice</h1>
     <h2>Git marge work practice</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos cumque
+      aliquid laudantium? Quibusdam voluptate explicabo perspiciatis fugiat
+      molestias voluptatum nesciunt tempore facilis dignissimos dicta iure
+      libero soluta, accusantium, nam dolores tenetur praesentium corporis quae
+      esse, minima dolore! Libero exercitationem distinctio tempore eligendi
+      mollitia. Aperiam neque commodi impedit, unde iusto debitis?
+    </p>
   </body>
 </html>
