--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Git marge work practice</h1>
     <h2>Git marge work practice</h2>
+    <a href="#">This is new line for me.</a>
   </body>
 </html>
